apps/spezidb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spezidb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spezidb
  template:
    metadata:
      labels:
        app: spezidb
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: spezidb
          image: flipez/spezidb:latest
          command: ["bash", "-c", "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"]
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: storage
              mountPath: /rails/storage
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: spezidb-storage
