apps/spezidb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spezidb
  namespace: default
spec:
  selector:
    app: spezidb
  ports:
    - port: 3000
      targetPort: 3000
